<resources>
    <string name="app_name">Android-Project-2020-Z_Team</string>
    <string name="mapbox_access_token">sk.eyJ1Ijoiei10ZWFtIiwiYSI6ImNraWFsamU3YTBqdngyc3JrOTNxNXoxcHQifQ.6qIU-PkG7o_-WcuctceK1g</string>
    <string name="base_storage_url">"gs://android-project-2020-zteam.appspot.com"</string>
    <string name="authUI">Auth</string>
    <string name="sign_in_cancelled">Sign In canceled</string>
    <string name="no_internet_connection">Interneta netu</string>
    <string name="unknown_error">Unknown error :(</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">NEWS</string>
    <string name="walkAnnotations">WALKS</string>
    <string name="friends">FRIENDS</string>
    <string name="profile">PROFILE</string>
    <string name="some_menu">SOME MENU</string>
    <string name="go_out">GO OUT</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="ON_PROGRESS">on_progress</string>
    <string name="SUCCESS">success</string>
    <string name="FAILED">failed</string>
    <string name="ERROR">error</string>
    <string name="NONE">none</string>
    <string name="don_t_have_account_yet_sign_up_now">Don\'t have account yet? Sign up now.</string>
    <string name="forgot_password_recover_with_email">Forgot password? Recover with email.</string>
    <string name="edit">edit</string>
    <string name="name_text">NAME</string>
    <string name="age_text">AGE</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="friend_request">Friend Request</string>
    <string name="friends_list">friends list</string>
    <string name="you_have_no_friend_requests">You have no friend requests</string>
    <string name="add_friend">Accept</string>
    <string name="upload">Upload</string>
    <string name="zero_int">0</string>
    <string name="channel_go_out_name">Go Out channel</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="add_your_first_friend">Add your first friend</string>
    <string name="anonymous">Anonymous</string>
    <string name="you_don_t_have_walks_yet">You don\'t have walks yet</string>
    <string name="add_walk">Add Walk</string>
    <string name="you_don_t_have_any_friend_to_watch_their_news">You don\'t have any friends to watch their news</string>
    <string name="your_age">Your age</string>
    <string name="your_name">Your name</string>
    <string name="name">name:</string>
    <string name="age">age: </string>
    <string name="published_after_death">published after death</string>
    <string name="title">Title</string>
</resources>