<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/auth_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authUI"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/register"
        app:layout_constraintTop_toTopOf="@id/auth_btn" />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/log_in"
        app:layout_constraintTop_toTopOf="@id/register_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>