<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainMenuActivity">

    <RelativeLayout
        android:id="@+id/profile_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_image"
            android:src="@drawable/user_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="25dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/primaryDarkColor"
        android:textSize="20sp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image_layout"/>

    <EditText
        android:id="@+id/profile_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/primaryDarkColor"
        android:textSize="20sp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/profile_name"/>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/profile_age"/>

    <Button
        android:id="@+id/save_changes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/save_changes"
        app:layout_constraintTop_toBottomOf="@id/edit_btn"/>



</androidx.constraintlayout.widget.ConstraintLayout>