<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/news_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/news_card"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_width="match_parent"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/card_back"
        app:checkedIcon="@color/primaryLightColor"
        android:outlineAmbientShadowColor="@color/secondaryColor"
        android:layout_margin="8dp"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="8dp"
                    app:civ_border_width="5dp"
                    app:civ_border_overlay="true"
                    app:civ_border_color="@color/primaryDarkColor"
                    android:src="@drawable/ic_person"/>
                <TextView
                    android:id="@+id/news_item_author"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/anonymous"
                    style="@style/H1Text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/news_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/H1Text"
                    android:layout_margin="8dp"
                    android:text="@string/title"/>

                <TextView
                    android:id="@+id/news_item_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/DateText"
                    android:text="@string/published_after_death"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>